--- a/.github/workflows/windows-pyoxidizer.yml
+++ b/.github/workflows/windows-pyoxidizer.yml
@@ -4,16 +4,16 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Tag da versão (ex.: v0.1.5)"
+        description: "Versão (tag) ex.: v0.0.5"
         required: true
         type: string
       tag_repository:
-        description: "Criar tag automaticamente?"
+        description: "Criar e enviar tag para o repositório?"
         required: true
         default: true
         type: boolean
       publish_release:
-        description: "Publicar Release?"
+        description: "Publicar Release no GitHub?"
         required: true
         default: true
         type: boolean
@@ -22,45 +22,85 @@ permissions:
   contents: write
 
 jobs:
-  build:
+  build-win:
     runs-on: windows-latest
 
     steps:
+      # ------------------------------------------------------------
+      # CHECKOUT
+      # ------------------------------------------------------------
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
+          fetch-depth: 0   # necessário para criar/push de tag
 
-      - name: Prepare version
+      # ------------------------------------------------------------
+      # PYTHON + DEPENDÊNCIAS (mesmo padrão do PyInstaller)
+      # ------------------------------------------------------------
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+          cache: 'pip'
+          cache-dependency-path: requirements.txt
+
+      - name: Install Python dependencies
         shell: pwsh
         run: |
-          $ver = "${{ inputs.version }}"
-          "APP_VER=$ver" | Out-File -FilePath $env:GITHUB_ENV -Append
-          Write-Host "Versão definida: $ver"
+          python -m pip install --upgrade pip
+          if (Test-Path requirements.txt) { pip install -r requirements.txt }
 
-      - name: Create tag
-        if: ${{ inputs.tag_repository == true }}
+      # ------------------------------------------------------------
+      # VERSÃO E NOMES (APP_VER / APP_NAME) – MESMA LÓGICA DOS OUTROS
+      # ------------------------------------------------------------
+      - name: Compute version and names
+        shell: pwsh
+        run: |
+          if ("${{ github.event_name }}" -eq "workflow_dispatch") {
+            $ver = "${{ inputs.version }}"
+          }
+          elseif ("${{ github.ref }}".StartsWith("refs/tags/")) {
+            $ver = "${{ github.ref_name }}"
+          }
+          else {
+            $ver = "dev-${{ github.run_number }}"
+          }
+          "APP_VER=$ver" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
+          $repo = "${{ github.repository }}".Split("/")[1]
+          "APP_NAME=$repo" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+
+      # (Opcional) cria e envia a tag quando disparado manualmente
+      - name: Create & push tag (manual dispatch)
+        if: ${{ github.event_name == 'workflow_dispatch' && inputs.tag_repository }}
         shell: bash
         run: |
           set -e
           VER="${{ env.APP_VER }}"
-          echo "Criando tag: $VER"
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
+          echo "Versão definida: $VER"
 
-          if git rev-parse "$VER" >/dev/null 2>&1; then
-            echo "Tag já existe. Pulando criação."
-          else
-            git tag -a "$VER" -m "Release $VER"
-            git push origin "$VER"
+          # valida formato vX.Y.Z
+          if ! [[ "$VER" =~ ^v[0-9]+\.[0-9]+\.[0-9]+(-.*)?$ ]]; then
+            echo "Formato de versão inválido: $VER (esperado: vX.Y.Z)"
+            exit 1
           fi
 
-      - name: Install Python 3.10
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.10"
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
-      # Aqui eu vou reforçar Rust e garantir que cargo está OK
+          # Se a tag já existir localmente, não recria
+          if git rev-parse "$VER" >/dev/null 2>&1; then
+            echo "Tag $VER já existe localmente."
+          else
+            git tag -a "$VER" -m "Release $VER"
+          fi
+
+          # Pode falhar se a tag já existir no remoto; apenas avisa e segue
+          git push origin "refs/tags/$VER" || echo "Tag já pode existir no remoto; seguindo..."
+
+      # ------------------------------------------------------------
+      # RUST + PYOXIDIZER
+      # ------------------------------------------------------------
       - name: Install Rust
         uses: dtolnay/rust-toolchain@stable
 
@@ -87,6 +127,9 @@ jobs:
           pyoxidizer --version
           where.exe pyoxidizer
 
+      # ------------------------------------------------------------
+      # SANITY CHECK DO PROJETO (pyoxidizer.bzl + main.py)
+      # ------------------------------------------------------------
       - name: Check project structure
         shell: pwsh
         run: |
@@ -102,11 +145,13 @@ jobs:
             if (Test-Path $f) {
               Write-Host "[OK] $f encontrado"
             } else {
-              Write-Host "[ERRO] $f NÃO encontrado"
+              Write-Error "[ERRO] $f NÃO encontrado"
             }
           }
 
-      # Build com log detalhado salvo em arquivo
+      # ------------------------------------------------------------
+      # BUILD COM LOG DETALHADO
+      # ------------------------------------------------------------
       - name: Build EXE with PyOxidizer (trace log)
         shell: pwsh
         run: |
@@ -139,7 +184,9 @@ jobs:
           Write-Error "PyOxidizer build falhou. Verifique o artefato pyoxidizer.log."
           exit 1
 
-      # Coleta EXE (só roda se build tiver passado)
+      # ------------------------------------------------------------
+      # COLETA E RENOMEIA O EXE (PADRÃO APP_NAME-APP_VER)
+      # ------------------------------------------------------------
       - name: Collect EXE
         if: success()
         shell: pwsh
@@ -148,19 +195,28 @@ jobs:
           if (-not $exe) { throw "Nenhum EXE encontrado no diretório build!" }
 
           New-Item dist -ItemType Directory -Force | Out-Null
-          $dest = "dist/ProcessSimul-${{ env.APP_VER }}.exe"
+          $dest = "dist/${{ env.APP_NAME }}-${{ env.APP_VER }}.exe"
           Copy-Item $exe.FullName $dest -Force
           Write-Host "EXE Final gerado: $dest"
 
-      - name: Upload artifact
+      # ------------------------------------------------------------
+      # ARTEFATO
+      # ------------------------------------------------------------
+      - name: Upload artifact (.exe)
         if: success()
         uses: actions/upload-artifact@v4
         with:
-          name: ProcessSimul-${{ env.APP_VER }}
+          name: ${{ env.APP_NAME }}-${{ env.APP_VER }}-win
           path: dist/*.exe
+          if-no-files-found: error
 
+      # ------------------------------------------------------------
+      # RELEASE
+      # ------------------------------------------------------------
+      # - quando for push de tag (se no futuro você adicionar gatilho de push)
+      # - OU quando for workflow_dispatch com publish_release=true
       - name: Publish GitHub Release
-        if: ${{ success() && inputs.publish_release == true }}
+        if: ${{ startsWith(github.ref, 'refs/tags/') || (github.event_name == 'workflow_dispatch' && inputs.publish_release) }}
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ env.APP_VER }}
