--- a/.github/workflows/windows-pyoxidizer.yml
+++ b/.github/workflows/windows-pyoxidizer.yml
@@ -1,20 +1,14 @@
-name: Windows EXE (PyOxidizer via pip)
+name: Build Windows EXE (PyOxidizer + FULL MSVC + LLVM)
 
 on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Versão (tag), ex.: v0.1.4"
+        description: "Versão (tag) ex.: v1.0.0"
         required: true
         type: string
-      tag_repository:
-        description: "Criar e enviar tag para o repositório?"
-        required: true
-        default: true
-        type: boolean
       publish_release:
         description: "Publicar Release no GitHub?"
-        required: true
         default: true
         type: boolean
 
@@ -26,223 +20,167 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      # ------------------------------------------------------------
-      # CHECKOUT
-      # ------------------------------------------------------------
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+    # ---------------------------------------------------------------
+    # CHECKOUT
+    # ---------------------------------------------------------------
+    - name: Checkout
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
 
-      # ------------------------------------------------------------
-      # DEFINIR APP_VER E APP_NAME
-      # ------------------------------------------------------------
-      - name: Compute version and names
-        shell: pwsh
-        run: |
-          if ("${{ github.event_name }}" -eq "workflow_dispatch") {
-            $ver = "${{ inputs.version }}"
-          }
-          elseif ("${{ github.ref }}".StartsWith("refs/tags/")) {
-            $ver = "${{ github.ref_name }}"
-          }
-          else {
-            $ver = "dev-${{ github.run_number }}"
-          }
-          "APP_VER=$ver"  | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+    # ---------------------------------------------------------------
+    # DEFINIR VERSÃO / APP_NAME
+    # ---------------------------------------------------------------
+    - name: Compute version
+      shell: pwsh
+      run: |
+        $ver = "${{ inputs.version }}"
+        "APP_VER=$ver" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        $repo = "${{ github.repository }}".Split("/")[1]
+        "APP_NAME=$repo" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        Write-Host "APP_VER=$ver"
+        Write-Host "APP_NAME=$repo"
 
-          $repo = "${{ github.repository }}".Split("/")[1]
-          "APP_NAME=$repo" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+    # ---------------------------------------------------------------
+    # INSTALAR VISUAL STUDIO BUILD TOOLS COMPLETO
+    # ---------------------------------------------------------------
+    - name: Install Visual Studio Build Tools (full C++ & SDK)
+      shell: pwsh
+      run: |
+        Write-Host "Instalando Visual Studio Build Tools (isso leva ~10-15 minutos)..."
+        choco install visualstudio2022buildtools --package-parameters `
+          "--add Microsoft.VisualStudio.Workload.VCTools `
+          --add Microsoft.VisualStudio.Component.VC.Tools.x86.x64 `
+          --add Microsoft.VisualStudio.Component.Windows10SDK.20348 `
+          --add Microsoft.VisualStudio.Component.Windows11SDK.22621 `
+          --quiet --norestart" -y
 
-          Write-Host "APP_VER = $ver"
-          Write-Host "APP_NAME = $repo"
+    # ---------------------------------------------------------------
+    # INSTALAR LLVM / CLANG
+    # ---------------------------------------------------------------
+    - name: Install LLVM (Clang)
+      shell: pwsh
+      run: |
+        choco install llvm -y
+        refreshenv
+        clang --version
 
-      # ------------------------------------------------------------
-      # CRIAR/PUSH TAG (OPCIONAL)
-      # ------------------------------------------------------------
-      - name: Create & push tag (manual dispatch)
-        if: ${{ github.event_name == 'workflow_dispatch' && inputs.tag_repository }}
-        shell: bash
-        run: |
-          set -e
-          VER="${APP_VER}"
-          echo "Versão definida: $VER"
+    # ---------------------------------------------------------------
+    # INSTALAR RUST TOOLCHAIN
+    # ---------------------------------------------------------------
+    - name: Install Rust (stable)
+      uses: dtolnay/rust-toolchain@stable
+      with:
+        toolchain: stable
+        components: rustfmt, clippy
 
-          if ! [[ "$VER" =~ ^v[0-9]+\.[0-9]+\.[0-9]+(-.*)?$ ]]; then
-            echo "Formato de versão inválido: $VER (esperado: vX.Y.Z)"
-            exit 1
-          fi
+    - name: Check Rust
+      shell: pwsh
+      run: |
+        rustc -V
+        cargo -V
 
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+    # ---------------------------------------------------------------
+    # CONFIGURAR PYTHON
+    # ---------------------------------------------------------------
+    - name: Setup Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: "3.10"
+        cache: "pip"
 
-          if git rev-parse "$VER" >/dev/null 2>&1; then
-            echo "Tag $VER já existe localmente."
-          else
-            git tag -a "$VER" -m "Release $VER"
-          fi
+    - name: Install Python dependencies
+      shell: pwsh
+      run: |
+        python -m pip install --upgrade pip
+        if (Test-Path requirements.txt) {
+          pip install -r requirements.txt
+        }
 
-          git push origin "refs/tags/$VER" || echo "Tag já pode existir no remoto; seguindo..."
+    # ---------------------------------------------------------------
+    # INSTALAR PYOXIDIZER (AGORA FUNCIONA)
+    # ---------------------------------------------------------------
+    - name: Install PyOxidizer
+      shell: pwsh
+      env:
+        CARGO_NET_GIT_FETCH_WITH_CLI: "true"
+      run: |
+        Write-Host "Instalando PyOxidizer via pip (isso vai compilar em Rust)..."
+        pip install --upgrade pyoxidizer
 
-      # ------------------------------------------------------------
-      # PYTHON + DEPENDÊNCIAS
-      # ------------------------------------------------------------
-      - name: Setup Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
-          cache: 'pip'
-          cache-dependency-path: requirements.txt
+        Write-Host "Verificando instalação..."
+        python -m pyoxidizer --version
 
-      - name: Install Python dependencies
-        shell: pwsh
-        run: |
-          python -m pip install --upgrade pip
-          if (Test-Path requirements.txt) {
-            pip install -r requirements.txt
-          } else {
-            Write-Host "requirements.txt não encontrado, seguindo."
-          }
+    # DEBUG OPCIONAL – onde está o binário?
+    - name: Locate PyOxidizer binary
+      shell: pwsh
+      run: |
+        Write-Host "Procurando pyoxidizer.exe..."
+        $scripts = (python - << 'EOF'
+import sys, os
+print(os.path.join(os.path.dirname(sys.executable),"Scripts"))
+EOF
+        ).Trim()
+        if (Test-Path "$scripts/pyoxidizer.exe") {
+          Write-Host "ENCONTRADO: $scripts/pyoxidizer.exe"
+        } else {
+          Write-Host "NÃO ENCONTRADO no Scripts. Tentando buscar geral:"
+          Get-ChildItem -Path C:\ -Filter "pyoxidizer.exe" -Recurse -ErrorAction SilentlyContinue -Force -Depth 4 | Select-Object -First 10 FullName
+        }
 
-      # ------------------------------------------------------------
-      # INSTALAR RUST (PARA O BUILD DOS BINÁRIOS DO PYOXIDIZER)
-      # ------------------------------------------------------------
-      - name: Install Rust toolchain
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: stable
+    # ---------------------------------------------------------------
+    # BUILD COM PYOXIDIZER
+    # ---------------------------------------------------------------
+    - name: Run PyOxidizer build
+      shell: pwsh
+      env:
+        PYOXIDIZER_SYSTEM_RUST: "1"
+      run: |
+        Write-Host "Iniciando build do PyOxidizer..."
+        python -m pyoxidizer build --release --verbose *> pyoxidizer.log 2>&1
 
-      # ------------------------------------------------------------
-      # INSTALAR PYOXIDIZER VIA PIP + DEBUG DA INSTALAÇÃO
-      # ------------------------------------------------------------
-      - name: Install PyOxidizer via pip
-        shell: pwsh
-        run: |
-          Write-Host "=== pip install pyoxidizer ==="
-          python -m pip install "pyoxidizer==0.24.0"
+    - name: Show PyOxidizer log tail
+      if: always()
+      shell: pwsh
+      run: |
+        if (Test-Path pyoxidizer.log) {
+          Get-Content pyoxidizer.log -Tail 200
+        }
 
-          Write-Host "=== pip show pyoxidizer ==="
-          python -m pip show pyoxidizer
+    - name: Upload PyOxidizer log
+      if: always()
+      uses: actions/upload-artifact@v4
+      with:
+        name: pyoxidizer-log-${{ env.APP_VER }}
+        path: pyoxidizer.log
 
-          Write-Host "=== python -m pyoxidizer --version ==="
-          python -m pyoxidizer --version
+    # ---------------------------------------------------------------
+    # COLETAR EXE
+    # ---------------------------------------------------------------
+    - name: Collect Windows EXE
+      shell: pwsh
+      run: |
+        $exe = Get-ChildItem -Recurse build -Filter "*.exe" | Select-Object -First 1
+        if (-not $exe) { throw "Nenhum EXE encontrado!" }
 
-      - name: Diagnose PyOxidizer CLI (onde está o .exe?)
-        shell: pwsh
-        run: |
-          Write-Host "=== PATH ==="
-          Write-Host $env:Path
+        New-Item dist -ItemType Directory -Force | Out-Null
+        $dest = "dist/${{ env.APP_NAME }}-${{ env.APP_VER }}.exe"
+        Copy-Item $exe.FullName $dest -Force
+        Write-Host "EXE final: $dest"
 
-          Write-Host "=== Descobrindo Scripts do Python ==="
-          $scriptsDir = python - << 'EOF'
-          import sys, os
-          print(os.path.join(os.path.dirname(sys.executable), "Scripts"))
-          EOF
-          $scriptsDir = $scriptsDir.Trim()
-          Write-Host "Python Scripts dir: $scriptsDir"
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.APP_NAME }}-${{ env.APP_VER }}
+        path: dist/*.exe
 
-          if (Test-Path "$scriptsDir\\pyoxidizer.exe") {
-            Write-Host "Encontrado pyoxidizer.exe em:"
-            Get-Item "$scriptsDir\\pyoxidizer.exe"
-          } else {
-            Write-Host "pyoxidizer.exe NÃO encontrado no Scripts dir."
-          }
-
-          Write-Host "=== Busca ampla por pyoxidizer.exe em C:\\ (limite 20) ==="
-          Get-ChildItem -Path C:\ -Filter "pyoxidizer.exe" -Recurse -ErrorAction SilentlyContinue |
-            Select-Object FullName -First 20
-
-      # ------------------------------------------------------------
-      # CHECAGEM DE ESTRUTURA DO PROJETO
-      # ------------------------------------------------------------
-      - name: Check project structure
-        shell: pwsh
-        run: |
-          Write-Host "===== CURRENT DIRECTORY ====="
-          Get-Location
-
-          Write-Host "===== ROOT TREE ====="
-          Get-ChildItem -Force
-
-          $required = @("pyoxidizer.bzl", "main.py", "assets", "db")
-          foreach ($item in $required) {
-            if (Test-Path $item) {
-              Write-Host "[OK] $item encontrado"
-            } else {
-              Write-Error "[ERRO] $item NÃO encontrado"
-            }
-          }
-
-          if (-not (Test-Path "assets/app.ico")) {
-            Write-Error "[ERRO] assets/app.ico NÃO encontrado"
-          }
-
-          if (-not (Test-Path "db/banco.db")) {
-            Write-Error "[ERRO] db/banco.db NÃO encontrado"
-          }
-
-      # ------------------------------------------------------------
-      # BUILD COM PYOXIDIZER (USANDO python -m pyoxidizer)
-      # ------------------------------------------------------------
-      - name: Build EXE with PyOxidizer
-        shell: pwsh
-        env:
-          PYOXIDIZER_SYSTEM_RUST: "1"
-        run: |
-          Write-Host "=== Iniciando build (python -m pyoxidizer build --release --verbose) ==="
-          python -m pyoxidizer build --release --verbose *> pyoxidizer.log 2>&1
-
-      - name: Show PyOxidizer log (tail)
-        if: always()
-        shell: pwsh
-        run: |
-          Write-Host "=== Last 200 lines of pyoxidizer.log ==="
-          if (Test-Path pyoxidizer.log) {
-            Get-Content pyoxidizer.log -Tail 200
-          } else {
-            Write-Host "pyoxidizer.log não encontrado."
-          }
-
-      - name: Upload PyOxidizer log
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: pyoxidizer-log-${{ env.APP_VER }}
-          path: pyoxidizer.log
-          if-no-files-found: warn
-
-      # ------------------------------------------------------------
-      # COLETAR E RENOMEAR O EXE
-      # ------------------------------------------------------------
-      - name: Collect EXE
-        if: success()
-        shell: pwsh
-        run: |
-          $exe = Get-ChildItem -Recurse "build" -Filter "*.exe" | Select-Object -First 1
-          if (-not $exe) {
-            throw "Nenhum .exe encontrado no diretório build!"
-          }
-
-          New-Item dist -ItemType Directory -Force | Out-Null
-          $dest = "dist/${{ env.APP_NAME }}-${{ env.APP_VER }}.exe"
-          Copy-Item $exe.FullName $dest -Force
-          Write-Host "EXE Final: $dest"
-
-      - name: Upload artifact (.exe)
-        if: success()
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ env.APP_NAME }}-${{ env.APP_VER }}-win
-          path: dist/*.exe
-          if-no-files-found: error
-
-      # ------------------------------------------------------------
-      # RELEASE NO GITHUB (OPCIONAL)
-      # ------------------------------------------------------------
-      - name: Publish GitHub Release
-        if: ${{ inputs.publish_release }}
-        uses: softprops/action-gh-release@v2
-        with:
-          tag_name: ${{ env.APP_VER }}
-          files: dist/*.exe
-          generate_release_notes: true
+    # ---------------------------------------------------------------
+    # RELEASE (OPCIONAL)
+    # ---------------------------------------------------------------
+    - name: Publish GitHub Release
+      if: ${{ inputs.publish_release }}
+      uses: softprops/action-gh-release@v2
+      with:
+        tag_name: ${{ env.APP_VER }}
+        files: dist/*.exe
+        generate_release_notes: true
